Refactor BookMetadataUpdater